new style added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         </title>
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
         <link href="" rel="icon" type="image/png"/>
-        <link href="https://fonts.googleapis.com/css?family=Raleway:700,900" rel="stylesheet"/>
     </head>
     <body>
         <div class="flex-container">
@@ -34,15 +33,22 @@
 
             <section class="about-section">
                 <div class="container">
+                    <div class="fg-big-box">
+                    <div class="about-section__image">
+                        <img src="images/fruits.png" class="about-section__img-fruits">
+                    </div>
                 	<div class="about-section__details">
                 		<h2 class="about-section__details-h-two">About Us</h2>
-                		<p class="about-section__details-paragraph">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum. Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+                		<p class="about-section__details-paragraph">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                        <p class="about-section__details-paragraph">Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
                 	</div>
-                </div>
+                    </div>
+                 </div>
             </section>
 
             <section class="service-section">
                 <div class="container">
+                    <div class="fg-big-box">
                 	<div class="service-section__details">
                 	<div class="service-section__details-first-box">
                 		<h5 class="service-section__text">Online Shopping</h5>
@@ -61,6 +67,7 @@
                      <div class="service-section__heading-box">
                      	<h2 class="service-section__heading-box-h-two">Our Services</h2>
                      </div>
+                 </div>
                 </div>
             </section>
 
