new style added2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section class="about-section">
                 <div class="container">
                     <div class="fg-big-box">
-                    <div class="about-section__image">
+                    <div class="about-section__div-for-image">
                         <img src="images/fruits.png" class="about-section__img-fruits">
                     </div>
                 	<div class="about-section__details">
@@ -148,7 +148,7 @@
                         <input type="text" name="" placeholder="Auskteez Tran" class="contact-section__name-input"/>
                         <input type="email" name="" placeholder="Your email..." class="contact-section__email-input"/>
                         <input type="number" name="" placeholder="Your phone number..." class="contact-section__number-input"/>
-                        <textarea rows="15" cols="58" class="contact-section__textarea">Your message...</textarea>
+                        <textarea rows="15" cols="60" class="contact-section__textarea" placeholder="Your message..."></textarea>
                     </form>
                     <div class="contact-section__info">
                         <div class="contact-section__info-div">
