--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
         </title>
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
         <link href="" rel="icon" type="image/png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
         <div class="flex-container">
             <header class="fresh-section">
-                <div class="container">
+                <div class="fresh-section__container">
                 	<div class="fresh-section__menu">
-                		<img src="images/logo.png" class="fresh-section__menu-logo">
+                        <img src="images/logo.png" class="fresh-section__menu-logo">
+                        
+                    <label for="menu" class="fresh-section__label">
+                        <img src="images/lines.png" class="fresh-section__label--img"/>
+                    </label>
+                    <input type="checkbox" class="fresh-section__input" id="menu"/>
                 	<nav class="fresh-section__menu-nav">
                 	<a href="#" class="fresh-section__menu-nav-link active">Home</a>
                 	<a href="#" class="fresh-section__menu-nav-link">About</a>
@@ -32,8 +38,8 @@
             </header>
 
             <section class="about-section">
-                <div class="container">
-                    <div class="fg-big-box">
+                <div class="about-section__container">
+                    <div class="about-section__fg-big-box">
                     <div class="about-section__div-for-image">
                         <img src="images/fruits.png" class="about-section__img-fruits">
                     </div>
@@ -47,19 +53,19 @@
             </section>
 
             <section class="service-section">
-                <div class="container">
-                    <div class="fg-big-box">
+                <div class="service-section__container">
+                    <div class="service-section__fg-big-box">
                 	<div class="service-section__details">
-                	<div class="service-section__details-first-box">
+                	<div class="service-section__details-first-box service-section__boxes">
                 		<h5 class="service-section__text">Online Shopping</h5>
                 	</div>
-                	<div class="service-section__details-second-box">
+                	<div class="service-section__details-second-box service-section__boxes">
                 		<h5 class="service-section__text">Quality Product</h5>
                 	</div>
-                	<div class="service-section__details-third-box">
+                	<div class="service-section__details-third-box service-section__boxes">
                 		<h5 class="service-section__text">Domestic & International Delivery</h5>
                 	</div>
-                	<div class="service-section__details-forth-box">
+                	<div class="service-section__details-forth-box service-section__boxes">
                 		<h5 class="service-section__text">Well Organized</h5>
                 	</div>
                      </div>
@@ -72,19 +78,29 @@
             </section>
 
             <section class="gallery-section">
-                <div class="container">
+                <div class="gallery-section__container">
                 	<div class="gallery-section__details">
                 		<h2 class="gallery-section__details-h-two">Gallery</h2>
                 		<p class="gallery-section__details-paragraph">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 	</div>
                 	<div class="gallery-section__flex-container">
-                		<div class="gallery-section__flex-container-first-box"></div>
+                		<div class="gallery-section__flex-container-first-box">
+                            <img src="images/gallerpeaches.png" alt="Fruts" class="gallery-section__images"/>
+                        </div>
                 		<div class="gallery-section__flex-container-second-box">
-                			<div class="gallery-section__flex-container-second-box--first-square"></div>
-                			<div class="gallery-section__flex-container-second-box--second-square"></div> 
+                			<div class="gallery-section__flex-container-second-box--first-square">
+                                <img src="images/gallarybaries.png" alt="Fruts" class="gallery-section__images"/>
+                            </div>
+                			<div class="gallery-section__flex-container-second-box--second-square">
+                                <img src="images/gallery-toot.png" alt="Fruts" class="gallery-section__images"/>
+                            </div> 
                 		</div>
-                		<div class="gallery-section__flex-container-third-box"></div>
-                		<div class="gallery-section__flex-container-forth-box"></div>
+                		<div class="gallery-section__flex-container-third-box">
+                      <img src="images/gallery-glass.png" alt="Fruts" class="gallery-section__images"/>      
+                        </div>
+                		<div class="gallery-section__flex-container-forth-box">
+                       <img src="images/gallery-orange.png" alt="Fruts" class="gallery-section__images"/>      
+                        </div>
                 	</div>
                 	<div class="gallery-section__div-for-button">
                 		<button class="gallery-section__button">View More</button>
@@ -94,7 +110,7 @@
             </section>
 
             <section class="subscribe-section">
-                <div class="container">
+                <div class="subscribe-section__container">
                 	<div class="subscribe-section__ditails">
                 		<h2 class="subscribe-section__ditails-h-two">Subscribe To Us</h2>
                 		<p class="subscribe-section__ditails-paragraph">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -107,7 +123,7 @@
             </section>
 
             <section class="blog-section">
-                <div class="container">
+                <div class="blog-section__container">
                     <div class="blog-section__details">
                         <h2 class="blog-section__details-title">Blog</h2>
                         <p class="blog-section__details-text">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
@@ -139,13 +155,14 @@
             </section>
             
             <section class="contact-section">
-                <div class="container">
+                <div class="contact-section__container">
                     <div class="contact-section__details">
                         <h2 class="contact-section__details-title">Contact</h2>
                         <p class="contact-section__details-text">For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
                     </div>
+                    <div class="contact-section__fg-big-box">
                     <form class="contact-section__form">
-                        <input type="text" name="" placeholder="Auskteez Tran" class="contact-section__name-input"/>
+                        <input type="text" name="" placeholder="Your name..." class="contact-section__name-input"/>
                         <input type="email" name="" placeholder="Your email..." class="contact-section__email-input"/>
                         <input type="number" name="" placeholder="Your phone number..." class="contact-section__number-input"/>
                         <textarea rows="15" cols="60" class="contact-section__textarea" placeholder="Your message..."></textarea>
@@ -159,11 +176,12 @@
                         <h4 class="contact-section__info-titles">Phone</h4>
                         <p class="contact-section__info-text">+0123456789</p>
                         </div>
+                        </div>
                     </div>
                 </div>
             </section>
             <footer class="footer-section">
-                <div class="container">
+                <div class="footer-section__container">
                     <div class="footer-section__flex-container">
                         <div class="footer-section__flex-container-copyright"><p class="footer-section__text">&copy; 2015 Company. All right reserved.</p></div>
                         <div class="footer-section__flex-container-logo"><img src="images/white-logo.png" class="footer-section__img"></div>
@@ -173,4 +191,6 @@
             </footer>
         </div>
     </body>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="menu.js"></script>
 </html>
