new style added

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
                 	<div class="fresh-section__menu">
                         <img src="images/logo.png" class="fresh-section__menu-logo">
                         
-                    <label for="menu" class="fresh-section__label">
+                    <label for="menu" class="fresh-section__label" id="fresh">
                         <img src="images/lines.png" class="fresh-section__label--img"/>
                     </label>
                     <input type="checkbox" class="fresh-section__input" id="menu"/>
                 	<nav class="fresh-section__menu-nav">
-                	<a href="#" class="fresh-section__menu-nav-link active">Home</a>
-                	<a href="#" class="fresh-section__menu-nav-link">About</a>
-                	<a href="#" class="fresh-section__menu-nav-link">Services</a>
-                	<a href="#" class="fresh-section__menu-nav-link">Gallery</a>
-                	<a href="#" class="fresh-section__menu-nav-link">Blog</a>
-                	<a href="#" class="fresh-section__menu-nav-link">Contact</a>
+                	<a href="#fresh" class="fresh-section__menu-nav-link active">Home</a>
+                	<a href="#about" class="fresh-section__menu-nav-link">About</a>
+                	<a href="#service" class="fresh-section__menu-nav-link">Services</a>
+                	<a href="#gallery" class="fresh-section__menu-nav-link">Gallery</a>
+                	<a href="#blog" class="fresh-section__menu-nav-link">Blog</a>
+                	<a href="#contact" class="fresh-section__menu-nav-link">Contact</a>
                     </nav>
                     </div>
                     <div class="fresh-section__details">
@@ -37,7 +37,7 @@
                 </div>
             </header>
 
-            <section class="about-section">
+            <section class="about-section" id="about">
                 <div class="about-section__container">
                     <div class="about-section__fg-big-box">
                     <div class="about-section__div-for-image">
@@ -52,7 +52,7 @@
                  </div>
             </section>
 
-            <section class="service-section">
+            <section class="service-section" id="service">
                 <div class="service-section__container">
                     <div class="service-section__fg-big-box">
                 	<div class="service-section__details">
@@ -77,7 +77,7 @@
                 </div>
             </section>
 
-            <section class="gallery-section">
+            <section class="gallery-section" id="gallery">
                 <div class="gallery-section__container">
                 	<div class="gallery-section__details">
                 		<h2 class="gallery-section__details-h-two">Gallery</h2>
@@ -122,7 +122,7 @@
                 </div>
             </section>
 
-            <section class="blog-section">
+            <section class="blog-section" id="blog">
                 <div class="blog-section__container">
                     <div class="blog-section__details">
                         <h2 class="blog-section__details-title">Blog</h2>
@@ -154,7 +154,7 @@
                 </div>
             </section>
             
-            <section class="contact-section">
+            <section class="contact-section" id="contact">
                 <div class="contact-section__container">
                     <div class="contact-section__details">
                         <h2 class="contact-section__details-title">Contact</h2>
